src/main/webapp/less/SearchDataGrid.less
// Core variables and mixins
@import "utils";

// --------- SearchDataGrid --------- //
.SearchDataGrid {
	.fitparent();
	.input-wrapper {
		position: relative;
		display:inline-block;
		height: 26px;
		input {
			width: 100%;
			height: 100%;
			line-height: 26px;
			background: #ffffff;
			border-radius: 2px;
			border-width: 1px;
			border-style: solid;
			border-color: #D8D8D9;
			padding: 2px 25px 2px 5px;
			margin-right: 10px;
			font-size: 14px;
		}
		i.glyphicon-search {
			position: absolute;
			top: 6px;
			right: 10px;
			color: #A3A3A3;
			font-size: 15px;
			z-index: 900;
			cursor: pointer;
		}
	}
	
	.input-wrapper.big {
		height: 55px;
		display: block;
		input{
			background: #ffffff;
			font-size: 20px;
			padding-left: 25px;
			padding-right: 55px;
			&:focus {
				border-color: rgba(82, 168, 236, 0.8);
				outline: 0;
				-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
				box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
			}
		}
		i.glyphicon-search {
			top: 10px;
			font-size: 32px;
		}
	}
	
	.gridControls {
		position: absolute;
		left: 5px;
		top: 10px;
		right: 0px;
		.searchField{
			float:left;
		}
		.toolbar-ctn{
			float:left;
			margin-left:4px;
			margin-bottom:5px;
		}
	
		.resultTime {
			float:left;
			color: #ced0cf;
			margin-left: 12px;
			margin-top: 4px;
			margin-bottom:12px;
		}
		.resultCount {
			float:right;
			font-weight: bold;
			color: #666;
			margin-right: 12px;
			margin-top: 4px;
		}

		
		.pagination-ctn {
			float:right;
			margin-top: -4px;
		}
	
	}
	
	.search-result {
		top: 40px;
		right: 50px;
		bottom: 0;
		left: 0px;
		position: absolute;
		margin: 0px auto 20px auto;
		padding: 5px;
		min-width: 600px;
		&.favFilter {
			top: 20px;
			div.btnPopupColumns {
				height: 32px;
				line-height: 32px;
				font-size: 32px;
				padding-left: 10px;
                padding-top: 0px;
			}
		}
	
		.btnPopupColumns {
			position: absolute;
			width: 40px;
			right: -45px;
			top: 6px;
			font-size: 60px;
			background: #e0e0e0;
			border: none;
			color: #ffffff;
			border-radius: 0px;
			padding: 0px 12px;
			height: 96px;
			padding-left: 3px;
			box-sizing: border-box;
		}
		
		.tableContainer {
			.fitparent();
			.holderSpace {
				color: #ccc;
				overflow-x: hidden;
				.headerTh {
					color: #ccc;
					background: #fff !important;
					border: 1px #ccc dashed;
				}
				a {
					color: #ccc;
				}
			}
			#dragTable {
				border: 1px dashed #000000;
				tbody{
					overflow-y: hidden
				}
			}
			
			table {
				display: block;
				position: relative;
				width: 100%;
				height: 100%;
				overflow: hidden;
				font-size: 14px;
				tr {
					vertical-align: top;
					td, th {
						padding-left: 4px;
						padding-top: 7px;
						text-align: left;
					}
				}
				thead tr {
					display: block;
					position: relative;
					th {
						font-weight: bold;
						height: 104px;
						color: #fff;
						font-size: 18px;
						&.favLabel {
							padding-left: 3px;
							.headerTh {
								background: #fffbac;
								padding-left: 0;
							}
						}
						&.applyContact {
							padding-left: 0;
							.headerTh {
								background: #ebebeb;
								padding-left: 0;
							}
						}
						.headerTh {
							height: 96px;
							padding: 4px 10px;
							position: relative;
							background: #000000;
							.indicators{
								overflow:hidden;
								.indicator{
									display:inline-block;
									color:#4b4b4b;
									font-size:12px;
									padding:3px 6px;
									border-radius:4px;
									border:1px solid #8f8f8f;
									background:#D0CD41;
									.value{
										color:#fff;
										margin-left:5px;
									}
								}
							}
							.selectedItems{
								position: absolute;
								bottom: 5px;
								left: 5px;
								right: 5px;
								max-height: 65px;
								font-size: 12px;
								vertical-align: bottom;.item,
								.addFilter{
									padding: 2px;
									margin: 1px;
									line-height: 12px;
									display: inline-block;
									overflow: hidden;
									white-space: nowrap;
									text-overflow: ellipsis;
									word-break: normal;
									font-size: 12px;
									vertical-align: bottom;
									cursor: pointer;
									font-weight: normal;
								}
					
								.item {
									max-width: 200px;
								}
					
								.selectedItems {
									cursor: pointer;
									font-weight: normal;
								}
							}
					
							.columnName {
								display: inline-block;
								font-weight: normal;
								letter-spacing: 0.1em;
								width: 87%;
							}
						}
					
						.idTh {
							background: #ccc;
						}
						.nameTh {
							background: #d4c761;
						}
						.contactTh {
							background: #d4c761;
							.columnName {
								cursor: pointer;
							}
						}
						.CreatedDateTh {
							background: #E13CC7;
						}
						.titleTh {
							background: #3CE198;
						}
						.emailTh {
							background: #B33CE1;
						}
						.educationTh {
							background: #dc7a4d;
						}
						.companyTh {
							background: #33aad2;
						}
						.resumeTh {
							background: #A7EE3C !important;
						}
						.customTh {
							background: #cf98ee;
						}
						.locationTh {
							background: #4bc272;
							.columnName {
								cursor: pointer;
							}
						}
						.skillTh {
							background: #e13c5e;
						}
						.desc, .asc {
							width: auto;
							display: none;
							margin-left: 5px;
							float: right;
							font-size: 10px;
							font-weight: normal;
						}
					}
					th.checkboxCol {
						width: 30px;
						background: #ffffff;
						border-color: white;
						border: none;
					}
					th.favFilter {
						height: 32px !important;
						
						.selectedItems, .asc, .desc {
							display: none
						}
						.headerTh {
							height: 32px
						}
					}
				
				}
				
				tbody {
					.fitparent();
					overflow-x:hidden;
					overflow-y: auto;
					top: 103px;
					&.favFilter {
						top: 38px;
					}
					tr {
						padding-bottom: 8px;
						padding-top: 8px;
						min-height: 60px;
					}
					tr.select, tr.applySelect, tr:hover {
						background: #D5FEFF !important;
					}
					
					tr:nth-of-type(even) {
						background: #ECECEC;
					}
					td {
						> span {
							display: block;
							width: 100%;
							padding-left: 2px;
							text-overflow: ellipsis;
							height: 60px;
							word-break: break-word;
							overflow: hidden;
						}
						.lineInfo {
							display: block;
							white-space: nowrap;
							overflow: hidden;
							text-overflow: ellipsis;
						}
						.lineInfo.name {
							font-weight: bold;
						}
					}
					td[data-column='skill'], td[data-column='company'], td[data-column='education'] {
						>span {
							cursor: pointer;
							&:empty {
								cursor: default;
							}
						}
					}
					td.checkboxCol {
						width: 30px;
						input[type="checkbox"]{
							margin-left: -5px;
						}
					}
					td.applyContact {
						width: 32px;
						input {
							line-height: 60px;
							height: 60px;
							margin-top: -1px;
							margin-left: 5px;
						}
					}
					td.favLabel {
						width: 32px;
						i {
							display: block;
							font-size: 16px;
							line-height: 60px;
							height: 60px;
							color: #ccc;
							cursor: pointer;
							padding-left: 5px;
						}
						&.hasLabel {
							i{
								color: #fed43b;
							}
						
						}
					}
				}
			}
			
						
			table.scrollTable tbody tr {
				border-bottom: 1px solid #dddddd;
				display: block;
			}

			table.scrollTable tbody tr .resume-ico {
				cursor: pointer;
				margin-left: 20px;
			}

						
			table  tr.full {
				.fitparent();
				top: 30px;
				&:hover{
					background: white !important;
				}
				td {
					width: 100%;
					.empty-search {
						position: absolute;
						width: 90%;
						height: 240px;
						border-radius: 15px;
						top: 0px;
						left: 50%;
						text-align: center;
						font-size: 20px;
						color: #bbbbbb;
						padding-top: 80px;
						margin-left: -45%;
					}
					.loading {
						position: absolute;
						top: 70px;
						left: 50%;
						width: 300px;
						margin-left: -150px;
						font-size: 20px;
						color: #bbbbbb;
						background: #ddd;
						height: 80px;
						text-align: center;
						padding-top: 35px;
					}
					
					.alert-error, .alert-info {
						position: absolute;
						top: 70px;
						left: 50%;
						width: 300px;
						margin-left: -150px;
					}
				}
			}

		}
	
	}

}
@media (max-width: 1120px){
	.SearchDataGrid {
		.search-result{
			top:73px;
		}
	}
}
// --------- /SearchDataGrid --------- //

